--- a/Ruby/AMPTA/Gemfile
+++ b/Ruby/AMPTA/Gemfile
@@ -7,6 +7,12 @@ gem 'rails', '3.2.11'
 
 gem 'sqlite3'
 
+# BCrypt-Ruby
+gem 'bcrypt-ruby', :require => 'bcrypt'
+
+# Devise authentication gem
+#gem 'devise'
+
 
 # Gems used only for assets and not required
 # in production environments by default.
@@ -21,6 +27,9 @@ group :assets do
 end
 
 gem 'jquery-rails'
+
+# Twitter Bootstrap
+gem 'bootstrap-sass', '2.1'
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
